--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "eslint-import-resolver-typescript": "^2.4.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
